fix endpoints and docs
