# src/controllers/pallets/PalletsMiningSpeedBoostRatesTokenMiningController.ts
@@ -7,15 +7,15 @@ import AbstractController from '../AbstractController';
 
 export default class PalletsMiningSpeedBoostRatesTokenMiningsController extends AbstractController<PalletsMiningSpeedBoostRatesTokenMiningService> {
 	constructor(api: ApiPromise) {
-		super(api, '/pallets/mining/mining-speed-boost/rates/token-mining',
-		new PalletsMiningSpeedBoostRatesTokenMiningService(api));
+    super(api, '/pallets/mining/mining-speed-boost/rates/token-mining',
+    new PalletsMiningSpeedBoostRatesTokenMiningService(api));
 		this.initRoutes();
 	}
 
 	protected initRoutes(): void {
 		// GET
 		this.safeMountAsyncGetHandlers([
-			['/:index', this.getPalletsMiningSpeedBoostRatesTokenMiningById],
+			['/:index/show', this.getPalletsMiningSpeedBoostRatesTokenMiningById],
 			['/count', this.getPalletsMiningSpeedBoostRatesTokenMiningCount],
 		]);
 		// POST
@@ -25,7 +25,28 @@ export default class PalletsMiningSpeedBoostRatesTokenMiningsController extends 
 				.catchWrap(this.createPalletsMiningSpeedBoostRatesTokenMining)
 		);
 	}
-  
+
+	/**
+	 * POST Create a MiningSpeedBoostRatesTokenMining.
+	 *
+	 * @param req Express Request
+	 * @param res Express Response
+	 */
+	private createPalletsMiningSpeedBoostRatesTokenMining: IPostRequestHandler<ITx> = async (
+		{ body: { tx } },
+		res
+	): Promise<void> => {
+		if (!tx) {
+			throw {
+				error: 'Missing field `tx` on request body.',
+			};
+		}
+		PalletsMiningSpeedBoostRatesTokenMiningsController.sanitizedSend(
+			res,
+			await this.service.createPalletsMiningSpeedBoostRatesTokenMining(tx)
+		);
+	};
+
 	/**
 	 * GET Get a MiningSpeedBoostRatesTokenMining by its index.
 	 *
@@ -57,25 +78,4 @@ export default class PalletsMiningSpeedBoostRatesTokenMiningsController extends 
 			await this.service.fetchPalletsMiningSpeedBoostRatesTokenMiningCount()
 		);
   	};
-
-	/**
-	 * POST Create a MiningSpeedBoostRatesTokenMining.
-	 *
-	 * @param req Express Request
-	 * @param res Express Response
-	 */
-	private createPalletsMiningSpeedBoostRatesTokenMining: IPostRequestHandler<ITx> = async (
-		{ body: { tx } },
-		res
-	): Promise<void> => {
-		if (!tx) {
-			throw {
-				error: 'Missing field `tx` on request body.',
-			};
-		}
-		PalletsMiningSpeedBoostRatesTokenMiningsController.sanitizedSend(
-			res,
-			await this.service.createPalletsMiningSpeedBoostRatesTokenMining(tx)
-		);
-	};
 }
